[package]
name = "wasm_experiment"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.11.18"
serde = { version = "1.0.166", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.100"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.37"
